[BLC-770] Fixed image preview in Asset section from overlapping

--- a/admin/broadleaf-open-admin-platform/src/main/resources/org/broadleafcommerce/openadmin/public/admin/style/admin.css
+++ b/admin/broadleaf-open-admin-platform/src/main/resources/org/broadleafcommerce/openadmin/public/admin/style/admin.css
@@ -153,7 +153,7 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 .imgButtonSelectedOver img {vertical-align: top;}
 
 #gwt-component img {
-    vertical-align: top;
+    vertical-align: text-top;
 }
 
 /*============================= Catalog -> Offers =============================*/
